--- a/.htaccess
+++ b/.htaccess
@@ -140,7 +140,7 @@
 ############################################
 ## enable rewrites
 
-    Options +FollowSymLinks
+    Options +SymLinksIfOwnerMatch
     RewriteEngine on
 
 ############################################
